# conceptanalysis

./: .gitignore  README.md  main.cpp  meson.build
examples/: paper.csv  water.csv
include/: bitset.h  concept.h  csv.h  dot.h
src/: bitset.cpp  concept.cpp  csv.cpp  dot.cpp
